--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -9,9 +9,11 @@
     <div class="col-md-offset-3 col-md-6">
         <h3>TODO List</h3>
         <ul>
-            <li>Create JIRA for demo projects and infrastructure.</li>
+            <li>Allow for launching multiple node clusters</li>
+            <li>Create JIRA for demo projects and infrastructure</li>
 {#            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>#}
             <li>Sort reservations chronologically</li>
+            <li>Correctly compute Max Costs</li>
             <li>Weather Sensor Improvements</li>
             <ul>
                 <li>Fix issues with cross node hive commands</li>
@@ -56,7 +58,6 @@
             <li>Integrate with future company-wide single sign-on service.</li>
             <li>Future ability to allow partners to launch and access demos through SSO service.</li>
             <li>Add all/many existing demos into infrastructure.</li>
-            <li>Allow for launching multiple node clusters.</li>
             <li>Use GCE instead of AWS.</li>
         </ul>
     </div>
