Minor styling changes

--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -55,7 +55,7 @@
 {#            </div>#}
         </div>
 
-        <table class="table table-hover" id="launch-table">
+        <table class="table" id="launch-table">
             <tr>
                 <th>Launch Date</th>
                 <th>Cluster Name</th>
