--- a/flask/static/css/dashboard.css
+++ b/flask/static/css/dashboard.css
@@ -10,6 +10,12 @@
     margin-top: 25px;
 }
 
+tr {
+    border-top: 2px;
+    border-color: black;
+    border-top-style: solid;
+}
+
 .info-row {
     border-top: 0 !important;
 }
@@ -21,4 +27,35 @@
 
 .ttl-input {
     width: 80px;
+}
+
+/* Overwrite bootstrap.css with vibrant colors */
+.table > thead > tr > td.warning,
+.table > tbody > tr > td.warning,
+.table > tfoot > tr > td.warning,
+.table > thead > tr > th.warning,
+.table > tbody > tr > th.warning,
+.table > tfoot > tr > th.warning,
+.table > thead > tr.warning > td,
+.table > tbody > tr.warning > td,
+.table > tfoot > tr.warning > td,
+.table > thead > tr.warning > th,
+.table > tbody > tr.warning > th,
+.table > tfoot > tr.warning > th {
+    background-color: #FFFF8C;
+}
+
+.table > thead > tr > td.success,
+.table > tbody > tr > td.success,
+.table > tfoot > tr > td.success,
+.table > thead > tr > th.success,
+.table > tbody > tr > th.success,
+.table > tfoot > tr > th.success,
+.table > thead > tr.success > td,
+.table > tbody > tr.success > td,
+.table > tfoot > tr.success > td,
+.table > thead > tr.success > th,
+.table > tbody > tr.success > th,
+.table > tfoot > tr.success > th {
+    background-color: #7BFF87;
 }
