--- a/flask/static/css/dashboard.css
+++ b/flask/static/css/dashboard.css
@@ -57,5 +57,5 @@ tr {
 .table > thead > tr.success > th,
 .table > tbody > tr.success > th,
 .table > tfoot > tr.success > th {
-    background-color: #7BFF87;
+    background-color: #42D542;
 }
