--- a/flask/static/css/dashboard.css
+++ b/flask/static/css/dashboard.css
@@ -61,5 +61,5 @@ tr.info-row {
 .table > thead > tr.success > th,
 .table > tbody > tr.success > th,
 .table > tfoot > tr.success > th {
-    background-color: #42D542;
+    background-color: #5CB85C;
 }
