Slight css changes

--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="col-xs-offset-0 col-xs-12">
+    <div class="col-xs-offset-1 col-xs-9">
     <h3 class="col-xs-offset-1">Launch Ctool Clusters</h3>
 
     <datalist id="instance-type-list-gce">
@@ -378,7 +378,8 @@
 
     <div class="launched-spacer"></div>
 
-    <div class="form-border launched-clusters col-xs-offset-1 col-xs-10">
+    <h3 class="col-xs-offset-1">Mockup of Launched Data (Real Data Currently Under Dashboard)</h3>
+    <div class="form-border launched-clusters col-xs-offset-1 col-xs-9">
         <div class="row form-row">
             <div class="col-xs-4 form-col" id="clustername-col">
                 <label for="clustername">Cluster Name</label>
