--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -114,19 +114,73 @@
         <option value=10>
     </datalist>
     <datalist id="dse-version-list">
-        <option value="4.6-1">
+        <option value="4.6.0-1">
         <option value="4.5.3-1">
         <option value="4.5.2-1">
         <option value="4.5.1-1">
         <option value="4.5.0-1">
+        <option value="4.0.4-1">
+        <option value="4.0.3-1">
+        <option value="4.0.2-1">
+        <option value="4.0.1-1">
+        <option value="4.0.0-1">
+        <option value="3.2.7-1">
+        <option value="3.2.6-1">
+        <option value="3.2.5-1">
+        <option value="3.2.4-1">
+        <option value="3.2.3-1">
+        <option value="3.2.2-1">
+        <option value="3.2.1-1">
+        <option value="3.2.0-1">
+        <option value="3.1.6-1">
+        <option value="3.1.5-1">
+        <option value="3.1.4-1">
+        <option value="3.1.3-1">
+        <option value="3.1.2-1">
+        <option value="3.1.1-1">
+        <option value="3.1.0-1">
+        <option value="3.0.9-1">
+        <option value="3.0.8-1">
+        <option value="3.0.7-1">
+        <option value="3.0.6-1">
+        <option value="3.0.5-1">
+        <option value="3.0.4-1">
+        <option value="3.0.3-1">
+        <option value="3.0.2-1">
+        <option value="2.1.2-1">
+        <option value="2.1-2">
+        <option value="2.0-1">
     </datalist>
     <datalist id="num-of-tokens-list">
         <option value=0>
         <option value=256>
     </datalist>
     <datalist id="opscenter-version-list">
-        <option value="5.0.0-1">
-        <option value="4.5.0-1">
+        <option value="5.0.2">
+        <option value="5.0.1">
+        <option value="5.0.0">
+        <option value="4.1.4">
+        <option value="4.1.3">
+        <option value="4.1.2">
+        <option value="4.1.1">
+        <option value="4.1.0">
+        <option value="4.0.3">
+        <option value="4.0.2">
+        <option value="4.0.1">
+        <option value="3.2.2">
+        <option value="3.2.1">
+        <option value="3.2.0">
+        <option value="3.1.1">
+        <option value="3.1.0">
+        <option value="3.0.2-1">
+        <option value="3.0.1-1">
+        <option value="3.0.0-1">
+        <option value="2.1.3-1">
+        <option value="2.1.2-1">
+        <option value="2.1.1-2">
+        <option value="2.1-2">
+        <option value="2.0-2">
+        <option value="1.4.1-1">
     </datalist>
 
     <div class="form-border col-xs-offset-1 col-xs-10">
