Mark good demos

--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -17,8 +17,8 @@
                 <label for="demoChoice">Demo Name</label>
                 <select class="form-control" id="demoChoice" name="demoChoice">
                     <option>Connected Office</option>
-                    <option>Weather Sensors</option>
-                    <option>Real-Time Cross-Global Geolocation</option>
+                    <option>Weather Sensors (Not Yet Implemented)</option>
+                    <option>Real-Time Cross-Global Geolocation (Not Yet Created)</option>
                 </select>
             </div>
             <div class="form-group" id="password-group">
