Advanced dc text

--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -253,8 +253,9 @@
             </div>
 
             <div class="row form-row text-center">
-                <a href="#" class="configure-datacenters">-- configure data
-                    centers (not yet coded)--</a>
+                <a href="#" class="configure-datacenters">
+                    -- configure advanced data centers --
+                </a>
             </div>
 
             <div class="row form-row advanced-datacenters">
