--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -23,6 +23,7 @@
             <li><a href="https://datastax.jira.com/browse/TESTINF-929">TESTINF-929: Tag across all clouds</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-932">TESTINF-932: Launch OpsCenter on a separate node</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-937">TESTINF-937: Automatically configure OpsCenter to monitor cluster</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-943">TESTINF-943: Launch OpsCenter on the first node</a></li>
         </ul>
         <h3>Overview</h3>
         <ul>
