--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -44,6 +44,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>Launched Demos</h3>
+                <p>Information updates every 10 seconds</p>
             </div>
 
 {#            <div class="col-md-6">#}
