Update demo-launcher.pem location

--- a/flask/templates/pem.jinja2
+++ b/flask/templates/pem.jinja2
@@ -10,9 +10,9 @@
         <h3>PEM Key</h3>
         <div class="well" id="pem-file">{{ pem_file }}</div>
         <p>
-            Copy this file into: ~/.ssh/demo-launcher.pem
+            Copy this file into: ~/.datastax/demos/demo-launcher.pem
             <br/>
-            Protect the file using: chmod 600 ~/.ssh/demo-launcher.pem
+            Protect the file using: chmod 600 ~/.datastax/demos/demo-launcher.pem
         </p>
         <h3>demo-pem</h3>
         <p>
