--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -430,9 +430,11 @@
             </div>
         </form>
     </div>
+    </div>
 
     <div class="launched-spacer"></div>
 
+    <div class="col-xs-offset-1 col-xs-9">
     <h3 class="col-xs-offset-1">Mockup of Launched Data (Real Data Currently Under Dashboard)</h3>
     <div class="form-border launched-clusters col-xs-offset-1 col-xs-9">
         <div class="row form-row">
