Added code repo listing

--- a/flask/templates/overview.jinja2
+++ b/flask/templates/overview.jinja2
@@ -35,6 +35,37 @@
                 <li>On completion of the future SSO implementation, extend UI to partners and day access to classrooms.</li>
             </ul>
         </ul>
+        <h3>Code Repositories</h3>
+        <ul>
+            <li>
+                <a href="https://github.com/datastax-demos/demos-web-gui">github.com/datastax-demos/demos-web-gui</a>
+                <p>
+                    Repo for this website as well as the vagrant scripts needed to reproduce this website
+                    and launch the demos.
+                </p>
+            </li>
+            <li>
+                <a href="https://github.com/datastax-demos/datastax-dockerfiles">github.com/datastax-demos/datastax-dockerfiles</a>
+                <p>
+                    Repo for <a href="http://hub.docker.com/datastax">hub.docker.com/datastax</a>
+                    docker images for DSE, OpsCenter, and the available demos.
+                </p>
+            </li>
+            <li>
+                <a href="https://github.com/riptano/automaton">github.com/riptano/automaton</a>
+                <p>
+                    Test Engineering's project that's utilized under the
+                    <a href="/ctool">ctool</a> page.
+                </p>
+            </li>
+            <li>
+                <a href="https://github.com/datastax-demos/conference-demos">github.com/datastax-demos/conference-demos</a>
+                <p>
+                    A standalone project aimed at conference demos, but available for
+                    local deployments of VirtualBox nodes accessible through a web browser.
+                </p>
+            </li>
+        </ul>
     </div>
 {% endblock %}
 
