--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -24,6 +24,7 @@
             <li><a href="https://datastax.jira.com/browse/TESTINF-932">TESTINF-932: Launch OpsCenter on a separate node</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-937">TESTINF-937: Automatically configure OpsCenter to monitor cluster</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-943">TESTINF-943: Launch OpsCenter on the first node</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-944">TESTINF-944: Create individual logs per user and cluster</a></li>
         </ul>
     </div>
 {% endblock %}
