--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -9,6 +9,7 @@
     <div class="col-md-offset-3 col-md-6">
         <h3>TODO List</h3>
         <ul>
+            <li>Support each ctool EC2 cloud selection and demo-pem file update</li>
             <li>Allow for launching multiple node clusters</li>
             <li>Create JIRA for demo projects and infrastructure</li>
 {#            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>#}
