Better login messaging and url in email

--- a/flask/templates/login.jinja2
+++ b/flask/templates/login.jinja2
@@ -8,6 +8,11 @@
 {% block body %}
     <div class="col-md-offset-4 col-md-4">
         <h3>Please Sign In</h3>
+        <p>Or request a password be sent to your @datastax.com email address.</p>
+        <p>
+            Passwords are reset once a week, but your cookies may allow you to
+            stay logged in for a slightly longer time period.
+        </p>
 
         <form role="form" action="login" method="post" id="login-form">
             <div class="form-group">
