Update todo list

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -9,6 +9,7 @@
     <div class="col-md-offset-3 col-md-6">
         <h3>TODO List</h3>
         <ul>
+            <li>Restrict admin interface by email</li>
             <li>Support each ctool EC2 cloud selection and demo-pem file update</li>
             <li>Allow for launching multiple node clusters</li>
             <li>Create JIRA for demo projects and infrastructure</li>
@@ -24,8 +25,8 @@
             <li><a href="https://datastax.jira.com/browse/TESTINF-929">TESTINF-929: Tag across all clouds</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-932">TESTINF-932: Launch OpsCenter on a separate node</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-937">TESTINF-937: Automatically configure OpsCenter to monitor cluster</a></li>
-            <li><a href="https://datastax.jira.com/browse/TESTINF-943">TESTINF-943: Launch OpsCenter on the first node</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-944">TESTINF-944: Create individual logs per user and cluster</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-946">TESTINF-946: Launch OpsCenter on the first node</a></li>
         </ul>
     </div>
 {% endblock %}
