--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -16,6 +16,11 @@
 {#            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>#}
             <li>Correctly compute Max Costs</li>
             <li>Weather Sensor Improvements</li>
+            <li>How to Contribute New Demos</li>
+            <li>Inputs and Outputs</li>
+            <li>Training Outline</li>
+            <li>Austin 1pm</li>
+            <li>Coffice - improve i, fix maps, description for asset tracking</li>
             <ul>
                 <li>Fix issues with cross node hive commands</li>
             </ul>
