--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -31,7 +31,7 @@
                 <label for="clustersize">Cluster Size</label>
                 <input type="number" class="form-control"
                        id="clustersize" name="clustersize"
-                       value=1 disabled>
+                       value=3 >
             </div>
             <button type="submit" class="btn btn-default btn-success"
                     id="submit-button">
