--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -28,7 +28,7 @@
                        value=2>
             </div>
             <div class="form-group" id="clustersize-group">
-                <label for="clustersize">Cluster Size</label>
+                <label for="clustersize">DataStax Enterprise Node Count</label>
                 <input type="number" class="form-control"
                        id="clustersize" name="clustersize"
                        value=3 >
