Rearrange jiras. New todos

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -12,6 +12,8 @@
             <li>Restrict admin interface by email</li>
             <li>Support each ctool EC2 cloud selection and demo-pem file update</li>
             <li>Allow for launching multiple node clusters</li>
+            <li>Allow changing of region/az.</li>
+            <li>Better az error messages</li>
             <li>Create JIRA for demo projects and infrastructure</li>
 {#            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>#}
             <li>Correctly compute Max Costs</li>
@@ -24,14 +26,15 @@
             <ul>
                 <li>Fix issues with cross node hive commands</li>
             </ul>
+            <li>Check ctool names with spaces</li>
         </ul>
         <h3>Outstanding Tickets</h3>
         <ul>
-            <li><a href="https://datastax.jira.com/browse/TESTINF-929">TESTINF-929: Tag across all clouds</a></li>
-            <li><a href="https://datastax.jira.com/browse/TESTINF-932">TESTINF-932: Launch OpsCenter on a separate node</a></li>
-            <li><a href="https://datastax.jira.com/browse/TESTINF-937">TESTINF-937: Automatically configure OpsCenter to monitor cluster</a></li>
-            <li><a href="https://datastax.jira.com/browse/TESTINF-944">TESTINF-944: Create individual logs per user and cluster</a></li>
             <li><a href="https://datastax.jira.com/browse/TESTINF-946">TESTINF-946: Launch OpsCenter on the first node</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-944">TESTINF-944: Create individual logs per user and cluster</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-937">TESTINF-937: Automatically configure OpsCenter to monitor cluster</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-932">TESTINF-932: Launch OpsCenter on a separate node</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-929">TESTINF-929: Tag across all clouds</a></li>
         </ul>
     </div>
 {% endblock %}
