--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -22,6 +22,7 @@
             <li>Inputs and Outputs</li>
             <li>Training Outline</li>
             <li>Austin 1pm</li>
+            <li>Test without nohup</li>
             <li>Coffice - improve i, fix maps, description for asset tracking</li>
             <ul>
                 <li>Fix issues with cross node hive commands</li>
