Reorg todo list

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -9,25 +9,27 @@
     <div class="col-md-offset-3 col-md-6">
         <h3>TODO List</h3>
         <ul>
+            <li>Allow for launching multiple node clusters</li>
+            <li>How to Contribute New Demos</li>
+            <li>Create JIRA for demo projects and infrastructure</li>
+            <li>Test without nohup</li>
+            <li>Check ctool names with spaces</li>
+            <li>agenda + presentation w/screenshots. live demo layout.</li>
+            <li>Use real max costs.</li>
             <li>Restrict admin interface by email</li>
             <li>Support each ctool EC2 cloud selection and demo-pem file update</li>
-            <li>Allow for launching multiple node clusters</li>
             <li>Allow changing of region/az.</li>
             <li>Better az error messages</li>
-            <li>Create JIRA for demo projects and infrastructure</li>
 {#            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>#}
             <li>Correctly compute Max Costs</li>
             <li>Weather Sensor Improvements</li>
-            <li>How to Contribute New Demos</li>
             <li>Inputs and Outputs</li>
             <li>Training Outline</li>
             <li>Austin 1pm</li>
-            <li>Test without nohup</li>
             <li>Coffice - improve i, fix maps, description for asset tracking</li>
             <ul>
                 <li>Fix issues with cross node hive commands</li>
             </ul>
-            <li>Check ctool names with spaces</li>
         </ul>
         <h3>Outstanding Tickets</h3>
         <ul>
