Add contributing repo url

--- a/flask/templates/overview.jinja2
+++ b/flask/templates/overview.jinja2
@@ -38,6 +38,13 @@
         <h3>Code Repositories</h3>
         <ul>
             <li>
+                <a href="https://github.com/datastax-demos/contributing">github.com/datastax-demos/contributing</a>
+                <p>
+                    Repo for the getting started guide and sample files that introduce users to Docker and
+                    the format Dockerfiles must be in to be included in this Demo Portal.
+                </p>
+            </li>
+            <li>
                 <a href="https://github.com/datastax-demos/demos-web-gui">github.com/datastax-demos/demos-web-gui</a>
                 <p>
                     Repo for this website as well as the vagrant scripts needed to reproduce this website
