--- a/flask/templates/overview.jinja2
+++ b/flask/templates/overview.jinja2
@@ -25,6 +25,17 @@
             </ul>
             <li>Dashboard</li>
             <ul>
+                <li>Intended audience:</li>
+                <ul>
+                    <li>Pre-Sales, Post-Sales, Sales, Marketing, Community</li>
+                    <li>Future: Partners, Vendors</li>
+                </ul>
+                <li>Purpose:</li>
+                <ul>
+                    <li>Showcase demo applications</li>
+                    <li>Showcase OpsCenter</li>
+                    <li>Showcase multi-node replication</li>
+                </ul>
                 <li>Simple SSH strings for easy copy-paste access.</li>
                 <li>Displays demo cost if left running for the maximum time.</li>
                 <li>Quick links for application and OpsCenter access.</li>
@@ -33,6 +44,17 @@
             </ul>
             <li>Ctool</li>
             <ul>
+                <li>Intended audience:</li>
+                <ul>
+                    <li>Pre-Sales, Post-Sales, Community</li>
+                    <li>Future: Partners, Vendors, POC Customers</li>
+                </ul>
+                <li>Purpose:</li>
+                <ul>
+                    <li>Simple cluster generation</li>
+                    <li>Issue replication</li>
+                    <li>Benchmarking clusters</li>
+                </ul>
                 <li>Provide a simple UI for our non-Engineering teams to demo clusters.</li>
                 <li>Allow all SE/SAs to easily and efficiently standup clusters.</li>
                 <li>Provide used ctool commands for a passive training experience.</li>
@@ -54,6 +76,17 @@
             </li>
             <li>
                 <a href="https://datastax.jira.com/issues/?filter=20620" target="_blank">Q42014 Roadmap</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="https://datastax.jira.com/browse/DEMO-41" target="_blank">Existing Webapp Demos [ADD MISSING DEMOS HERE]</a>
+            </li>
+            <li>
+                <a href="https://datastax.jira.com/browse/DEMO-42" target="_blank">Idea Pile [ADD SUGGESTIONS HERE]</a>
+            </li>
+            <li>
+                <a href="https://datastax.jira.com/browse/DEMO-43" target="_blank">Existing CLI-Only Demos</a>
             </li>
         </ul>
         <h3>Code Repositories</h3>
