--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Demo Web GUI</title>
+    <title>DataStax Demo Portal</title>
 
     <link href="{{ url_for('static', filename='img/favicon.ico') }}"
           rel="shortcut icon">
