--- a/flask/templates/overview.jinja2
+++ b/flask/templates/overview.jinja2
@@ -80,7 +80,7 @@
         </ul>
         <ul>
             <li>
-                <a href="https://datastax.jira.com/browse/DEMO-41" target="_blank">Existing Webapp Demos [ADD MISSING DEMOS HERE]</a>
+                <a href="https://datastax.jira.com/browse/DEMO-41" target="_blank">Existing Web App Demos [ADD MISSING DEMOS HERE]</a>
             </li>
             <li>
                 <a href="https://datastax.jira.com/browse/DEMO-42" target="_blank">Idea Pile [ADD SUGGESTIONS HERE]</a>
