Updating readmes as part of DEMO-49

--- a/flask/templates/overview.jinja2
+++ b/flask/templates/overview.jinja2
@@ -63,7 +63,7 @@
                 <li>`demo-pem` script allows for simple ssh key retrieval.</li>
             </ul>
         </ul>
-        <h3>Jira Links</h3>
+        <h3>JIRA Links</h3>
         <ul>
             <li>
                 <a href="https://datastax.jira.com/browse/DEMO" target="_blank">DEMO Jira Project</a>
