--- a/flask/templates/login.jinja2
+++ b/flask/templates/login.jinja2
@@ -7,20 +7,13 @@
 
 {% block body %}
     <div class="col-md-offset-4 col-md-4">
-        <h3>Please Sign In</h3>
-        <p>Or request a password be sent to your @datastax.com email address.</p>
-        <p>
-            Passwords are reset once a week, but your cookies may allow you to
-            stay logged in for a slightly longer time period.
-        </p>
-
         <form role="form" action="login" method="post" id="login-form">
             <div class="form-group">
                 <label for="inputEmail">Email address</label>
                 <input type="email" class="form-control" id="inputEmail"
-                       name="email" placeholder="Enter email">
+                       name="email" placeholder="email@datastax.com">
             </div>
-            <div class="form-group" id="password-group">
+            <div class="form-group" id="password-group" hidden>
                 <label for="inputPassword">Password</label>
                 <input type="password" class="form-control"
                        id="inputPassword" name="password"
@@ -28,12 +21,12 @@
             </div>
             <div class="btn-group btn-group-justified">
                 <div class="btn-group">
-                    <button type="button" class="btn btn-default active"
+                    <button type="button" class="btn btn-default"
                             id="login">Login
                     </button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-default"
+                    <button type="button" class="btn btn-default active"
                             id="request-password">Request Password
                     </button>
                 </div>
