Properly handle jquery side of DEMO-63

--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -37,7 +37,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if session.email %}
                         <li><a href="/overview">Overview</a></li>
-                        <li class="navbar-text">Signed in as {{ session.email }}.</li>
+                        <li class="navbar-text">Signed in as {{ session.email }}</li>
                         <li><a href="/logout">Logout</a></li>
                     {% endif %}
                 </ul>
