--- a/flask/templates/login.jinja2
+++ b/flask/templates/login.jinja2
@@ -7,7 +7,7 @@
 
 {% block body %}
     <div class="col-md-offset-4 col-md-4">
-        <form role="form" action="login" method="post" id="login-form">
+        <form role="form" action="request-password" method="post" id="login-form">
             <div class="form-group">
                 <label for="inputEmail">Email address</label>
                 <input type="email" class="form-control" id="inputEmail"
