--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -37,7 +37,20 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if session.email %}
                         <li><a href="/overview">Overview</a></li>
-                        <li class="navbar-text">Signed in as {{ session.email }}</li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle"
+                               data-toggle="dropdown" role="button"
+                               aria-expanded="false">
+                                {{ session.email }} <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="/history">User History</a></li>
+                                <li><a href="#">Password Reset</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Toggle Admin Dashboard</a></li>
+                                <li><a href="#">Admin History</a></li>
+                            </ul>
+                        </li>
                         <li><a href="/logout">Logout</a></li>
                     {% endif %}
                 </ul>
