First pass at Admin History

--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -48,7 +48,7 @@
                                 <li><a href="#">Password Reset</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#">Toggle Admin Dashboard</a></li>
-                                <li><a href="#">Admin History</a></li>
+                                <li><a href="/admin-history">Admin History</a></li>
                             </ul>
                         </li>
                         <li><a href="/logout">Logout</a></li>
