Added admin paging view

--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -45,9 +45,9 @@
                             </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/history">User History</a></li>
-                                <li><a href="#">Password Reset</a></li>
+                                <li><a href="#">Password Reset (Coming soon)</a></li>
                                 <li class="divider"></li>
-                                <li><a href="#">Toggle Admin Dashboard</a></li>
+                                <li><a href="#">Toggle Admin Dashboard (Coming soon)</a></li>
                                 <li><a href="/admin-history">Admin History</a></li>
                             </ul>
                         </li>
