--- a/flask/templates/history.jinja2
+++ b/flask/templates/history.jinja2
@@ -1,8 +1,8 @@
 {% extends "base.jinja2" %}
 
 {% block head %}
-{#    <link href="{{ url_for('static', filename='css/history.css') }}"#}
-{#          rel="stylesheet">#}
+    {#    <link href="{{ url_for('static', filename='css/history.css') }}"#}
+    {#          rel="stylesheet">#}
 {% endblock %}
 
 {% block body %}
@@ -15,6 +15,43 @@
                     <th>{{ key | replace("_", " ") | title }}</th>
                 {% endfor %}
             </tr>
+            <p>
+                All history sorted by DESCENDING requests and ASCENDING request
+                updates.
+            </p>
+            {% if paging %}
+                <p>
+                    Paging adds an offset of X days to the current view. 0 being
+                    today and 1 being yesterday.
+                </p>
+
+                <nav>
+                    <ul class="pagination">
+                        <li>
+                            <a href="/admin-history/{{ paging.back }}"
+                               aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {% for p in range(paging.start_range, paging.end_range) %}
+                            {% if p == paging.page %}
+                                <li class="active"><a
+                                        href="/admin-history/{{ p }}">{{ p }}</a>
+                                </li>
+                            {% else %}
+                                <li><a href="/admin-history/{{ p }}">{{ p }}</a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+                        <li>
+                            <a href="/admin-history/{{ paging.forward }}"
+                               aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            {% endif %}
             {% for row in history %}
                 <tr>
                     {% for key, value in row.iteritems() %}
