--- a/flask/templates/history.jinja2
+++ b/flask/templates/history.jinja2
@@ -8,61 +8,63 @@
 {% block body %}
     <div class="col-md-offset-0 col-md-12">
         <h3>{{ title }}</h3>
+        <p>
+            All history sorted by DESCENDING requests and ASCENDING request
+            updates.
+        </p>
+        {% if paging %}
+            <p>
+                Paging adds an offset of X days to the current view. 0 being
+                today and 1 being yesterday.
+            </p>
+
+            <nav>
+                <ul class="pagination">
+                    <li>
+                        <a href="/admin-history/{{ paging.back }}"
+                           aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    {% for p in range(paging.start_range, paging.end_range) %}
+                        {% if p == paging.page %}
+                            <li class="active">
+                                <a href="/admin-history/{{ p }}">{{ p }}</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="/admin-history/{{ p }}">{{ p }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                    <li>
+                        <a href="/admin-history/{{ paging.forward }}"
+                           aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <h4>{{ paging.date }}</h4>
+        {% endif %}
 
         <table class="table table-hover">
             <tr>
-                {% for key in history[0] %}
-                    <th>{{ key | replace("_", " ") | title }}</th>
+                {% for header in headings %}
+                    <th>{{ header | replace("_", " ") | title }}</th>
                 {% endfor %}
             </tr>
-            <p>
-                All history sorted by DESCENDING requests and ASCENDING request
-                updates.
-            </p>
-            {% if paging %}
-                <p>
-                    Paging adds an offset of X days to the current view. 0 being
-                    today and 1 being yesterday.
-                </p>
-
-                <nav>
-                    <ul class="pagination">
-                        <li>
-                            <a href="/admin-history/{{ paging.back }}"
-                               aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        {% for p in range(paging.start_range, paging.end_range) %}
-                            {% if p == paging.page %}
-                                <li class="active"><a
-                                        href="/admin-history/{{ p }}">{{ p }}</a>
-                                </li>
-                            {% else %}
-                                <li><a href="/admin-history/{{ p }}">{{ p }}</a>
-                                </li>
-                            {% endif %}
-                        {% endfor %}
-                        <li>
-                            <a href="/admin-history/{{ paging.forward }}"
-                               aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            {% endif %}
             {% for row in history %}
                 <tr>
-                    {% for key, value in row.iteritems() %}
-                        {% if key in ["form_variables", "get_variables"] %}
-                            {% if value %}
-                                <td>{{ value | tojson | safe }}</td>
+                    {% for header in headings %}
+                        {% if header in ["form_variables", "get_variables"] %}
+                            {% if row[header] %}
+                                <td>{{ row[header] | tojson | safe }}</td>
                             {% else %}
                                 <td></td>
                             {% endif %}
                         {% else %}
-                            <td>{{ value or '' }}</td>
+                            <td>{{ row[header] or '' }}</td>
                         {% endif %}
                     {% endfor %}
                 </tr>
