--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -49,6 +49,7 @@
                                 <li class="divider"></li>
                                 <li><a href="#">Toggle Admin Dashboard (Coming soon)</a></li>
                                 <li><a href="/admin-history">Admin History</a></li>
+                                <li><a href="/last-seen">Last Seen User</a></li>
                             </ul>
                         </li>
                         <li><a href="/logout">Logout</a></li>
