Explain GMT timezone

--- a/flask/templates/history.jinja2
+++ b/flask/templates/history.jinja2
@@ -22,8 +22,8 @@
 
         {% if paging %}
             <p>
-                Paging adds an offset of X days to the current view. 0 being
-                today and 1 being yesterday.
+                Paging adds an offset of X days to the current view where 0 is
+                today and 1 is yesterday. The dates are split at midnight GMT.
             </p>
 
             <nav>
