--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -46,17 +46,19 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/history">User History</a></li>
                                 <li class="divider"></li>
-                                <li><a href="/launches">Launch History (by Date)</a></li>
-                                <li><a href="/demo-launches">Launch History (by Demo)</a></li>
-                                <li class="divider"></li>
                                 <li><a href="/toggle-admin">
                                     Toggle Admin View
                                     {% if session.admin %}
                                         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                                     {% endif %}
-                                </a></li>
-                                <li><a href="/last-seen">Last Seen User</a></li>
-                                <li><a href="/admin-history">Admin History</a></li>
+                                </a>
+                                {% if session.admin %}
+                                    <li class="divider"></li>
+                                    <li><a href="/last-seen">Last Seen User</a></li>
+                                    <li><a href="/admin-history">Admin History</a></li>
+                                    <li><a href="/launches">Launch History (by Date)</a></li>
+                                    <li><a href="/demo-launches">Launch History (by Demo)</a></li>
+                                {% endif %}
                             </ul>
                         </li>
                         <li><a href="/logout">Logout</a></li>
