Put DEMO-37 warning, in case i forget

--- a/flask2.0/DemoPortalFlask/templates/base.jinja2
+++ b/flask2.0/DemoPortalFlask/templates/base.jinja2
@@ -56,7 +56,7 @@
                                 {% if session.admin %}
                                     <li class="divider"></li>
                                     <li><a href="/add-admin">Add Admin User</a></li>
-                                    <li><a href="/add-external">Add External User</a></li>
+{#         DEMO-37 IS REQUIRED        <li><a href="/add-external">Add External User</a></li>#}
                                     <li class="divider"></li>
                                     <li><a href="/last-seen">Last Seen User</a></li>
                                     <li><a href="/admin-history">Admin History</a></li>
