Add support for EAP

--- a/flask2.0/DemoPortalFlask/templates/ctool.jinja2
+++ b/flask2.0/DemoPortalFlask/templates/ctool.jinja2
@@ -114,16 +114,22 @@
         <option value=10>
     </datalist>
     <datalist id="dse-version-list">
+        <option value="4.7.0">
         <option value="4.6.0-1">
+        <option value="4.5.5-1">
+        <option value="4.5.4-1">
         <option value="4.5.3-1">
         <option value="4.5.2-1">
         <option value="4.5.1-1">
         <option value="4.5.0-1">
+        <option value="4.0.5-1">
         <option value="4.0.4-1">
         <option value="4.0.3-1">
         <option value="4.0.2-1">
         <option value="4.0.1-1">
         <option value="4.0.0-1">
+        <option value="3.2.9-1">
+        <option value="3.2.8-1">
         <option value="3.2.7-1">
         <option value="3.2.6-1">
         <option value="3.2.5-1">
@@ -156,6 +162,7 @@
         <option value=256>
     </datalist>
     <datalist id="opscenter-version-list">
+        <option value="5.1.0">
         <option value="5.0.2">
         <option value="5.0.1">
         <option value="5.0.0">
@@ -322,7 +329,7 @@
                                 Version</label>
                             <input id="opscenter-version"
                                    name="opscenter-version"
-                                   value="5.0.2"
+                                   value="5.1.0"
                                    class="version-input"
                                    type="text" list="opscenter-version-list"/>
                         </span>
